solving the responsivity problems

--- a/src/App.css
+++ b/src/App.css
@@ -257,119 +257,12 @@ span.navbar-text {
   border-right: 0.08em solid #666;
 }
 
-/************ SubProjectDetails Css ************/
-.subproject-details {
-  padding: 120px 0;
-  position: relative;
-  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.1) -5.91%, rgba(74, 47, 189, 0.7) 111.58%);
-}
-
-.subproject-details h2 {
-  font-size: 45px;
-  font-weight: 700;
-  text-align: center;
-}
-
-.subproject-details h4 {
-  font-size: 25px;
-  font-weight: 700;
-  text-align: center;
-  /*margin-bottom:10px ;*/
-}
-
-.subproject-details-sub-h4 {
-  padding-bottom: 30px;
-  padding-top: 40px;
-}
-
-.subproject-details p {
-  color: #B8B8B8;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
-  margin: 14px auto 30px auto;
-  text-align: center;
-  width: 56%;
-}
-
-.subproject-details .nav.nav-pills {
-  width: 72%;
-  margin: 0 auto;
-  border-radius: 50px;
-  background-color: rgb(255 255 255 / 10%);
-  overflow: hidden;
-}
-
-.subproject-details .nav.nav-pills .nav-item {
-  width: 50%;
-}
-
-.subproject-details .nav.nav-pills .nav-link {
-  background-color: transparent;
-  border-radius: 0;
-  padding: 17px 0;
-  color: #fff;
-  width: 100%;
-  font-size: 17px;
-  letter-spacing: 0.8px;
-  font-weight: 500;
-  position: relative;
-  transition: 0.3s ease-in-out;
-  text-align: center;
-  z-index: 0;
-}
-
-.subproject-details .nav.nav-pills .nav-link::before {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 100%;
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: 0.3s ease-in-out;
-}
-
-.subproject-details .nav.nav-pills .nav-link.active::before {
-  width: 100% !important;
-}
-
-.subproject-details .nav.nav-pills .nav-link.active {
-  border: 1px solid rgba(255, 255, 255, 1);
-}
-
-.nav-link#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 55px 0px 0px 55px;
-}
-
-.nav-link#projects-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-}
-/* 
-.nav-link#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-.nav-link#projects-tabs-tab-fourth {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-.nav-link#projects-tabs-tab-fifth {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 0 55px 55px 0;
-}
- */
 
 /************ ProjectDetails Css ************/
 .project-details {
   padding: 120px 0;
   position: relative;
-  height: 90vh;
+  height: 100vh;
   background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.1) -5.91%, rgba(74, 47, 189, 0.7) 111.58%);
 }
 
@@ -393,13 +286,12 @@ span.navbar-text {
 
 .project-details p {
   color: #B8B8B8;
-  font-size: 24px;
+  font-size: 1.3rem;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin: 14px auto 30px auto;
   text-align: center;
-  margin-top: 35vh;
-  width: 56%;
+  width: 80%;
 }
 
 .project-details .nav.nav-pills {
